# Django-Test-Project

./: .gitignore  Notes.md  README.md  pyproject.toml
djangosite/: .gitignore  Notes.md  README.md  pyproject.toml
djangosite/djangosite/: settings.py  urls.py
djangosite/polls/: admin.py  models.py  views.py
djangosite/polls/migrations/: 0001_initial.py
djangosite/polls/models/: choice.py
djangosite/polls/modelss/: choice.py  question.py
djangosite/polls/templates/polls/: detail.html
djangosite/polls/tests/: test_question.py
djangosite/polls/tests/models/: test_question.py
djangosite/polls/tests/views/: test_poll_detail.py  test_poll_index.py
djangosite/recipe_site/: apps.py  urls.py
djangosite/recipe_site/forms/: user_registration.py
djangosite/recipe_site/static/recipe_site/: login.scss
djangosite/recipe_site/static/recipe_site/css/: base.scss  base_home.scss  error.scss  fonts.scss  landing_base.scss  login.scss  register.scss
djangosite/recipe_site/templates/recipe_site/: base_home.html  home.html  landing_base.html  login.html  recipes.html  registration.html
djangosite/recipe_site/views/: home.py  login_view.py  recipes_index.py  user_login.py  user_login_view.py  user_logout_view.py  user_registration.py
