[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["dominicwild <dominicwild@dominicwild.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
django-sass-compiler = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
